Bug 47989 - EDITING: Resume does not refresh Spell Check dialog box contents
Summary: EDITING: Resume does not refresh Spell Check dialog box contents
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.5.1 release
Hardware: Other All
: low normal
Assignee: Not Assigned
URL:
Whiteboard: BSA target:5.2.0
Keywords:
Depends on:
Blocks: Spell-Checking-Dialog
  Show dependency treegraph
 
Reported: 2012-03-28 02:21 UTC by Wyndham Clampett
Modified: 2017-11-07 18:38 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wyndham Clampett 2012-03-28 02:21:15 UTC
Problem description: 
One of the more irritating aspects of the Spell & Grammar dialog, is that it doesn't refresh on Resume.

Steps to reproduce:
1. Spell check finds error and displays dialog box
2. Make change directly in the document (e.g. use "find and replace all" because the "replace all" option seldom works)
3. Click on dialog box (anywhere) and the resume button is displayed
4. The old error remains displayed.

Current behavior:
As indicated above

Expected behavior:
On clicking resume, the current error should be re-checked and the dialog box refreshed as appropriate.

Platform (if different from the browser): 
              
Browser: Mozilla/5.0 (Windows NT 6.1; WOW64) AppleWebKit/535.11 (KHTML, like Gecko) Chrome/17.0.963.65 Safari/535.11
Comment 1 Joel Madero 2012-12-08 00:19:04 UTC
Verified. 

Marking: 
New (Confirmed)

Enhancement (this is a feature that works as expected but your suggestion is indeed a good one)

Low (wouldn't really help a ton of people, only saves a bit of time under a very specific scenario)


Thanks for reporting and for being patient as we triage the backlog.
Comment 2 Oliver Specht (CIB) 2016-01-13 13:45:45 UTC
This is not an enhancement but a bug introduced with the fix of issue 39348.
Comment 3 Commit Notification 2016-01-14 06:15:50 UTC
Oliver Specht committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=8c3ba5aa8de964313885afcdec06ef33a5c6a23a

tdf#47989: Restore button should re-read the text

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Xisco Faulí 2016-09-15 21:14:09 UTC Comment hidden (obsolete)
Comment 5 Xisco Faulí 2017-11-05 21:29:45 UTC
A polite ping to Oliver Specht: is this bug fixed? if so, could you please close it as RESOLVED FIXED ? Thanks