tdf#47989: Restore button should re-read the text

Fixes the re-use of the current sentence when restore button is
clicked (introduced with tdf#39348) and really updates the
current sentence in that case

Change-Id: Id29262cae01eadaf4d588aad2dac23bf77b2a645
Reviewed-on: https://gerrit.libreoffice.org/21428
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Oliver Specht <oliver.specht@cib.de>